@@ -97,6 +97,7 @@ Version 1.0.8
   -  Changed behaviour of PARSER_CONTROL now allowing to provide the full Lookahead and Lookbehind
      expressions used as delimiters inside keywords instead of a simple char group (BenBE)
   -  Removed <, > and / from HTML names, now only containing the real tag names (BenBE)
+  -  Fix: Properly handle newlines in REGEXPS so this does not produce invalid html anylonger (milian)
   -  Second part of default style changes. Affected in this release:
      * C++
      * C++ (QT)
